--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
     <title>عروض السوبرماركت - أفضل العروض اليومية</title>
     <!-- External libs used by original file -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.0/papaparse.min.js"
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.0/papaparse.min.js"
 defer="defer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"
 defer="defer"></script>
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts for Arabic -->
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&amp;display=swap"
-
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&amp;display=swap"
       rel="stylesheet">
     <style>
   :root{
@@ -1053,15 +1050,15 @@ defer="defer"></script>
   }
 </style> </head>
   <body>
-    <div class="container"> <!-- Hero Banner -->
+    <div class="container">
+      <!-- Hero Banner -->
       <div class="hero-banner">
         <div class="hero-content">
           <h1>🛒 أفضل عروض السوبرماركت اليومية</h1>
           <p class="hero-subtitle">قارن الأسعار بين كارفور، هايبر وان، سعودي
             ماركت وغيرها - وفر حتى 70%</p>
           <!-- Ticker banner -->
-          <div class="ticker-wrap" aria-live="polite" aria-atomic="true" role="region"
-
+          <div class="ticker-wrap" aria-live="polite" aria-atomic="true" role="region"
             aria-label="أفضل العروض">
             <div class="ticker-label"><i class="fas fa-bolt"></i> عروض مميزة</div>
             <div class="ticker-viewport" id="ticker-viewport">
@@ -1116,33 +1113,26 @@ defer="defer"></script>
         </div>
       </div>
       <!-- Quick Filter Chips -->
-      <div class="filter-chips" id="filter-chips"> <button class="chip active"
-
-          data-filter="all"><i class="fas fa-fire"></i> جميع العروض</button> <button
-
+      <div class="filter-chips" id="filter-chips"> <button class="chip active"
+          data-filter="all"><i class="fas fa-fire"></i> جميع العروض</button> <button
           class="chip" data-filter="hot"><i class="fas fa-bolt"></i> العروض
           الساخنة</button> <button class="chip" data-filter="ending"><i class="fas fa-clock"></i>
-          تنتهي قريباً</button> <button class="chip" data-filter="discount"><i
-
-            class="fas fa-percentage"></i> خصومات كبيرة</button> <button class="chip"
-
+          تنتهي قريباً</button> <button class="chip" data-filter="discount"><i
+            class="fas fa-percentage"></i> خصومات كبيرة</button> <button class="chip"
           data-filter="carrefour"><i class="fas fa-shopping-cart"></i> كارفور</button>
         <button class="chip" data-filter="hyperone"><i class="fas fa-store"></i>
           هايبر وان</button> <button class="chip" data-filter="food"><i class="fas fa-utensils"></i>
           منتجات غذائية</button> <button class="chip" data-filter="recent"><i class="fas fa-calendar-day"></i>
           أحدث العروض (آخر يومين)</button> </div>
       <!-- View Toggle -->
-      <div class="view-toggle"> <button class="view-btn active" id="view-grid-btn"><i
-
-            class="fas fa-th-large"></i> عرض شبكي</button> <button class="view-btn"
-
+      <div class="view-toggle"> <button class="view-btn active" id="view-grid-btn"><i
+            class="fas fa-th-large"></i> عرض شبكي</button> <button class="view-btn"
           id="view-table-btn"><i class="fas fa-table"></i> عرض جدول</button> </div>
       <!-- Products Grid -->
       <div class="products-grid" id="products-grid"></div>
       <!-- Controls -->
       <div class="controls" role="region" aria-label="عناصر التحكم">
-        <div class="row" style="flex:1;"> <input id="search-input" placeholder="ابحث عن منتجات أو علامات تجارية..."
-
+        <div class="row" style="flex:1;"> <input id="search-input" placeholder="ابحث عن منتجات أو علامات تجارية..."
             aria-label="حقل البحث" type="text">
           <select id="supermarket-filter" aria-label="تصفية حسب السوبر ماركت">
             <option value="">كل السوبر ماركت</option>
@@ -1156,21 +1146,15 @@ defer="defer"></script>
         </div>
         <div class="row" style="width:100%; gap:8px;">
           <!-- Min price with controls -->
-          <div class="price-controls" style="align-items:center;"> <button id="min-decrease"
-
-              type="button" aria-label="نقص الحد الأدنى">−</button> <input id="min-price"
-
-              placeholder="الحد الأدنى للسعر" aria-label="الحد الأدنى للسعر" step="0.5"
-
+          <div class="price-controls" style="align-items:center;"> <button id="min-decrease"
+              type="button" aria-label="نقص الحد الأدنى">−</button> <input id="min-price"
+              placeholder="الحد الأدنى للسعر" aria-label="الحد الأدنى للسعر" step="0.5"
               min="0" type="number"> <button id="min-increase" type="button" aria-label="زيادة الحد الأدنى">+</button>
           </div>
           <!-- Max price with controls -->
-          <div class="price-controls" style="align-items:center;"> <button id="max-decrease"
-
-              type="button" aria-label="نقص الحد الأقصى">−</button> <input id="max-price"
-
-              placeholder="الحد الأعلى للسعر" aria-label="الحد الأعلى للسعر" step="0.5"
-
+          <div class="price-controls" style="align-items:center;"> <button id="max-decrease"
+              type="button" aria-label="نقص الحد الأقصى">−</button> <input id="max-price"
+              placeholder="الحد الأعلى للسعر" aria-label="الحد الأعلى للسعر" step="0.5"
               min="0" type="number"> <button id="max-increase" type="button" aria-label="زيادة الحد الأقصى">+</button>
           </div>
           <select id="sort-by" aria-label="فرز حسب">
@@ -1182,14 +1166,11 @@ defer="defer"></script>
             <option value="name-asc">الاسم (أ-ي)</option>
             <option value="name-desc">الاسم (ي-أ)</option>
           </select>
-          <input id="min-discount" placeholder="الحد الأدنى للخصم %" aria-label="الحد الأدنى للخصم"
-
+          <input id="min-discount" placeholder="الحد الأدنى للخصم %" aria-label="الحد الأدنى للخصم"
             type="number">
           <div style="display:flex;gap:8px;"> <button id="reset-btn" aria-label="إعادة تعيين">🔄
-              إعادة تعيين</button> <button id="share-app" aria-label="مشاركة التطبيق"><i
-
-                class="fas fa-share-alt"></i> مشاركة</button> <button id="compare-mode-btn"
-
+              إعادة تعيين</button> <button id="share-app" aria-label="مشاركة التطبيق"><i
+                class="fas fa-share-alt"></i> مشاركة</button> <button id="compare-mode-btn"
               aria-label="وضع المقارنة"><i class="fas fa-balance-scale"></i>
               المقارنة</button> </div>
         </div>
@@ -1225,8 +1206,7 @@ defer="defer"></script>
         <h3 style="margin:0;"><i class="fas fa-balance-scale"></i> مقارنة
           المنتجات (<span id="comparison-count">0</span>/4)</h3>
         <div> <button id="clear-comparison" style="margin-left:10px; background:#dc3545; color:white; border:none; padding:8px 16px; border-radius:6px; cursor:pointer;">
-            <i class="fas fa-trash"></i> مسح الكل </button> <button id="close-comparison"
-
+            <i class="fas fa-trash"></i> مسح الكل </button> <button id="close-comparison"
             style="background:#6c757d; color:white; border:none; padding:8px 16px; border-radius:6px; cursor:pointer;">
             <i class="fas fa-times"></i> إغلاق </button> </div>
       </div>
@@ -2923,8 +2903,8 @@ if (document.readyState === 'loading') {
 }
 </script> <script>
 document.addEventListener("DOMContentLoaded", function () {
-  const params0 = new URLSearchParams(window.location.search);
-  const market = params0.get("market");
+  const params = new URLSearchParams(window.location.search);
+  const market = params.get("market");
 
   if (!market) return;
 
@@ -2940,8 +2920,8 @@ document.addEventListener("DOMContentLoaded", function () {
 <!-- </script>
     <script>
 document.addEventListener("DOMContentLoaded", function () {
-  const paramsA = new URLSearchParams(window.location.search);
-  const percent = paramsA.get("discount");
+  const params = new URLSearchParams(window.location.search);
+  const percent = params.get("discount");
 
   if (!percent) return;
 
@@ -3004,8 +2984,8 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 </script> <script>
 document.addEventListener("DOMContentLoaded", function () {
-  const params2 = new URLSearchParams(window.location.search);
-  const percent2 = params2.get("one_day");
+  const params = new URLSearchParams(window.location.search);
+  const percent2 = params.get("one_day");
   if (percent2) {
    
     const discountInput2 = document.getElementById("updateDateStr");
@@ -3024,16 +3004,16 @@ document.addEventListener("DOMContentLoaded", function () {
 
     // 4. Visual Feedback: Create a temporary visual "Chip" to show this mode is active
     const chipsContainer2 = document.getElementById('filter-chips');
-    if(chipsContainer2){
+    if(chipsContainer){
         // Remove active class from others
         document.querySelectorAll('.chip').forEach(c => c.classList.remove('active'));
         
         // Add a temporary chip for UI clarity
-        const tempChip2 = document.createElement('button');
-        tempChip2.className = 'chip active';
-        tempChip2.innerHTML = '<i class="fas fa-calendar-day"></i> عروض الـ 1 يوم';
+        const tempChip = document.createElement('button');
+        tempChip.className = 'chip active';
+        tempChip.innerHTML = '<i class="fas fa-calendar-day"></i> عروض الـ 1 يوم';
         // Insert it at the beginning
-        chipsContainer2.insertBefore(tempChip2, chipsContainer2.firstChild);
+        chipsContainer.insertBefore(tempChip, chipsContainer.firstChild);
     }
 
     // 5. Trigger the filter update
@@ -3046,6 +3026,5 @@ document.addEventListener("DOMContentLoaded", function () {
     }, 1000); // Small delay to ensure data is ready
   }
 });
-</script>
-  </body>
+</script> </body>
 </html>
