--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
     <title>عروض السوبرماركت - أفضل العروض اليومية</title>
     <!-- External libs used by original file -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.0/papaparse.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.0/papaparse.min.js"
+
 defer="defer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"
+
 defer="defer"></script>
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts for Arabic -->
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&amp;display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&amp;display=swap"
+
       rel="stylesheet">
     <style>
   :root{
@@ -1050,15 +1053,15 @@ defer="defer"></script>
   }
 </style> </head>
   <body>
-    <div class="container">
-      <!-- Hero Banner -->
+    <div class="container"> <!-- Hero Banner -->
       <div class="hero-banner">
         <div class="hero-content">
           <h1>🛒 أفضل عروض السوبرماركت اليومية</h1>
           <p class="hero-subtitle">قارن الأسعار بين كارفور، هايبر وان، سعودي
             ماركت وغيرها - وفر حتى 70%</p>
           <!-- Ticker banner -->
-          <div class="ticker-wrap" aria-live="polite" aria-atomic="true" role="region"
+          <div class="ticker-wrap" aria-live="polite" aria-atomic="true" role="region"
+
             aria-label="أفضل العروض">
             <div class="ticker-label"><i class="fas fa-bolt"></i> عروض مميزة</div>
             <div class="ticker-viewport" id="ticker-viewport">
@@ -1113,26 +1116,33 @@ defer="defer"></script>
         </div>
       </div>
       <!-- Quick Filter Chips -->
-      <div class="filter-chips" id="filter-chips"> <button class="chip active"
-          data-filter="all"><i class="fas fa-fire"></i> جميع العروض</button> <button
+      <div class="filter-chips" id="filter-chips"> <button class="chip active"
+
+          data-filter="all"><i class="fas fa-fire"></i> جميع العروض</button> <button
+
           class="chip" data-filter="hot"><i class="fas fa-bolt"></i> العروض
           الساخنة</button> <button class="chip" data-filter="ending"><i class="fas fa-clock"></i>
-          تنتهي قريباً</button> <button class="chip" data-filter="discount"><i
-            class="fas fa-percentage"></i> خصومات كبيرة</button> <button class="chip"
+          تنتهي قريباً</button> <button class="chip" data-filter="discount"><i
+
+            class="fas fa-percentage"></i> خصومات كبيرة</button> <button class="chip"
+
           data-filter="carrefour"><i class="fas fa-shopping-cart"></i> كارفور</button>
         <button class="chip" data-filter="hyperone"><i class="fas fa-store"></i>
           هايبر وان</button> <button class="chip" data-filter="food"><i class="fas fa-utensils"></i>
           منتجات غذائية</button> <button class="chip" data-filter="recent"><i class="fas fa-calendar-day"></i>
           أحدث العروض (آخر يومين)</button> </div>
       <!-- View Toggle -->
-      <div class="view-toggle"> <button class="view-btn active" id="view-grid-btn"><i
-            class="fas fa-th-large"></i> عرض شبكي</button> <button class="view-btn"
+      <div class="view-toggle"> <button class="view-btn active" id="view-grid-btn"><i
+
+            class="fas fa-th-large"></i> عرض شبكي</button> <button class="view-btn"
+
           id="view-table-btn"><i class="fas fa-table"></i> عرض جدول</button> </div>
       <!-- Products Grid -->
       <div class="products-grid" id="products-grid"></div>
       <!-- Controls -->
       <div class="controls" role="region" aria-label="عناصر التحكم">
-        <div class="row" style="flex:1;"> <input id="search-input" placeholder="ابحث عن منتجات أو علامات تجارية..."
+        <div class="row" style="flex:1;"> <input id="search-input" placeholder="ابحث عن منتجات أو علامات تجارية..."
+
             aria-label="حقل البحث" type="text">
           <select id="supermarket-filter" aria-label="تصفية حسب السوبر ماركت">
             <option value="">كل السوبر ماركت</option>
@@ -1146,15 +1156,21 @@ defer="defer"></script>
         </div>
         <div class="row" style="width:100%; gap:8px;">
           <!-- Min price with controls -->
-          <div class="price-controls" style="align-items:center;"> <button id="min-decrease"
-              type="button" aria-label="نقص الحد الأدنى">−</button> <input id="min-price"
-              placeholder="الحد الأدنى للسعر" aria-label="الحد الأدنى للسعر" step="0.5"
+          <div class="price-controls" style="align-items:center;"> <button id="min-decrease"
+
+              type="button" aria-label="نقص الحد الأدنى">−</button> <input id="min-price"
+
+              placeholder="الحد الأدنى للسعر" aria-label="الحد الأدنى للسعر" step="0.5"
+
               min="0" type="number"> <button id="min-increase" type="button" aria-label="زيادة الحد الأدنى">+</button>
           </div>
           <!-- Max price with controls -->
-          <div class="price-controls" style="align-items:center;"> <button id="max-decrease"
-              type="button" aria-label="نقص الحد الأقصى">−</button> <input id="max-price"
-              placeholder="الحد الأعلى للسعر" aria-label="الحد الأعلى للسعر" step="0.5"
+          <div class="price-controls" style="align-items:center;"> <button id="max-decrease"
+
+              type="button" aria-label="نقص الحد الأقصى">−</button> <input id="max-price"
+
+              placeholder="الحد الأعلى للسعر" aria-label="الحد الأعلى للسعر" step="0.5"
+
               min="0" type="number"> <button id="max-increase" type="button" aria-label="زيادة الحد الأقصى">+</button>
           </div>
           <select id="sort-by" aria-label="فرز حسب">
@@ -1166,11 +1182,14 @@ defer="defer"></script>
             <option value="name-asc">الاسم (أ-ي)</option>
             <option value="name-desc">الاسم (ي-أ)</option>
           </select>
-          <input id="min-discount" placeholder="الحد الأدنى للخصم %" aria-label="الحد الأدنى للخصم"
+          <input id="min-discount" placeholder="الحد الأدنى للخصم %" aria-label="الحد الأدنى للخصم"
+
             type="number">
           <div style="display:flex;gap:8px;"> <button id="reset-btn" aria-label="إعادة تعيين">🔄
-              إعادة تعيين</button> <button id="share-app" aria-label="مشاركة التطبيق"><i
-                class="fas fa-share-alt"></i> مشاركة</button> <button id="compare-mode-btn"
+              إعادة تعيين</button> <button id="share-app" aria-label="مشاركة التطبيق"><i
+
+                class="fas fa-share-alt"></i> مشاركة</button> <button id="compare-mode-btn"
+
               aria-label="وضع المقارنة"><i class="fas fa-balance-scale"></i>
               المقارنة</button> </div>
         </div>
@@ -1206,7 +1225,8 @@ defer="defer"></script>
         <h3 style="margin:0;"><i class="fas fa-balance-scale"></i> مقارنة
           المنتجات (<span id="comparison-count">0</span>/4)</h3>
         <div> <button id="clear-comparison" style="margin-left:10px; background:#dc3545; color:white; border:none; padding:8px 16px; border-radius:6px; cursor:pointer;">
-            <i class="fas fa-trash"></i> مسح الكل </button> <button id="close-comparison"
+            <i class="fas fa-trash"></i> مسح الكل </button> <button id="close-comparison"
+
             style="background:#6c757d; color:white; border:none; padding:8px 16px; border-radius:6px; cursor:pointer;">
             <i class="fas fa-times"></i> إغلاق </button> </div>
       </div>
@@ -1581,12 +1601,12 @@ function applyAllFilters() {
               
   case 'recent_extended': {
 
-    if (!latestTwoDates || latestTwoDates.length === 0) {
+    if (latestTwoDates || latestTwoDates.length === 0) {
         chipFilterPass = false;
         break;
     }
 
-    const newestDateInDB = new Date(latestTwoDates[0]);
+    const newestDateInDB0 = new Date(latestTwoDates[0]);
     let itemDate = null;
 
     if (item.updateDate) itemDate = normalizeDate(item.updateDate);
@@ -1595,17 +1615,17 @@ function applyAllFilters() {
         itemDate = normalizeDate(parseEndDate(item.validUntil));
     }
 
-    if (!itemDate || isNaN(newestDateInDB.getTime())) {
+    if (!itemDate || isNaN(newestDateInDB0.getTime())) {
         chipFilterPass = false;
         break;
     }
 
     // الفرق بدون abs (آخر يوم فقط)
-    const diffTime = newestDateInDB - itemDate;
-    const diffDays = diffTime / (1000 * 60 * 60 * 24);
+    const diffTime0 = newestDateInDB0 - itemDate;
+    const diffDays0 = diffTime0 / (1000 * 60 * 60 * 24);
 
     // ✅ آخر 24 ساعة فقط
-    chipFilterPass = diffDays >= 0 && diffDays < 7;
+    chipFilterPass = diffDays0 >= 0 && diffDays0 < 7;
 
     break;
 }
@@ -1629,7 +1649,7 @@ function applyAllFilters() {
                     const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24))
 
                     
-                    // Pass if within 7 days
+                    // Pass if within 1 days
                     chipFilterPass = diffDays <= 1;
                  } else {
                     chipFilterPass = false;
@@ -3026,5 +3046,6 @@ document.addEventListener("DOMContentLoaded", function () {
     }, 1000); // Small delay to ensure data is ready
   }
 });
-</script> </body>
+</script>
+  </body>
 </html>
