--- a/index.html
+++ b/index.html
@@ -1611,8 +1611,7 @@ case 'recent_extended': {
         return false;
     }
 
-    const newestRaw = new Date(const newestRaw = new Date(latestTwoDates.at(-1));
-);
+    const newestRaw = new Date(latestTwoDates[0]);
     if (isNaN(newestRaw)) return false;
 
     const newestDate = stripTime(newestRaw);
