--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,7 @@ document.addEventListener('DOMContentLoaded', ()=>{ init(); });
 /* =========================
    BOOTSTRAP (ONE TIME ONLY)
 ========================= */
-document.addEventListener('DOMContentLoaded', async () => {
+// document.addEventListener('DOMContentLoaded', async () => {
   try {
     await init();
     handleUrlParams();
